--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 <!--                                            </p>-->
 <!--                                            <p><span-->
 <!--                                                    class="title-s">Email: </span>-->
-<!--                                                <span>nirblo50@gmail.com</span>-->
+<!--                                                <span>regevnoam1@gmail.com</span>-->
 <!--                                            </p>-->
 <!--                                            <p><span-->
 <!--                                                    class="title-s">Phone: </span>-->
-<!--                                                <span>(+972) 502004712 </span>-->
+<!--                                                <span>(+972) 523208687 </span>-->
 <!--                                            </p>-->
 <!--                                        </div>-->
 <!--                                    </div>-->
@@ -152,8 +152,7 @@
 <!--                                        experiences.<br>-->
 <!--                                        I love programing, developing my own-->
 <!--                                        projects and creating new things.-->
-<!--                                        I have served for 4 years in Air force-->
-<!--                                        intelligence, there I gained a lot of-->
+<!--                                        I have served for 3 years as a Patrol Boat Commander, there I gained a lot of-->
 <!--                                        experience in-->
 <!--                                        teamwork, work under pressure, project-->
 <!--                                        management, data-->
@@ -563,11 +562,11 @@
 <!--                                            Herzl Blvd 98, Jerusalem-->
 <!--                                        </li>-->
                                         <li><span class="bi bi-phone"></span>
-                                            (+972) 50-2004712
+                                            (+972) 52-3208687
                                         </li>
                                         <li><span
                                                 class="bi bi-envelope"></span>
-                                            nirblo50@gmail.com
+                                            regevnoam1@gmail.com
                                         </li>
                                     </ul>
                                 </div>
