--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <!--        <div class="table-cell">-->
 <!--            <div class="container">-->
 <!--                &lt;!&ndash;<p class="display-6 color-d">Hello, world!</p>&ndash;&gt;-->
-<!--                <h1 class="hero-title mb-4">I am Nir Balouka</h1>-->
+    <!--                <h1 class="hero-title mb-4">I am Noam Regev</h1>-->
 <!--                <p class="hero-subtitle"><span class="typed"-->
 <!--                                               data-typed-items="Developer, Computer Science Student"></span>-->
 <!--                </p>-->
@@ -110,7 +110,7 @@
 <!--                                        <div class="about-info">-->
 <!--                                            <p><span-->
 <!--                                                    class="title-s">Name: </span>-->
-<!--                                                <span>Nir Balouka</span></p>-->
+<!--                                                <span>Noam Regev</span></p>-->
 <!--                                            <p><span-->
 <!--                                                    class="title-s">Age: </span>-->
 <!--                                                <span>24</span></p>-->
@@ -146,13 +146,13 @@
 <!--                                        </h5>-->
 <!--                                    </div>-->
 <!--                                    <p class="lead">-->
-<!--                                        I am a positive 24 years old computer-->
+<!--                                        I am a positive 25 years old computer-->
 <!--                                        science student-->
 <!--                                        with a thirst for new knowledge and new-->
 <!--                                        experiences.<br>-->
 <!--                                        I love programing, developing my own-->
 <!--                                        projects and creating new things.-->
-<!--                                        I have served for 3 years as a Patrol Boat Commander, there I gained a lot of-->
+<!--                                        I have served for 3 years at the Israeli Navy as a Patrol Boat Commander, there I gained a lot of-->
 <!--                                        experience in-->
 <!--                                        teamwork, work under pressure, project-->
 <!--                                        management, data-->
@@ -203,9 +203,11 @@
                                 <br><br><br>
 <!--                                <h6> Relevant Courses Taken: Introduction to CS-->
 <!--                                    in Python,-->
-<!--                                    Programming Workshop in C/C++,-->
+<!--                                    Programming in C/C++,-->
 <!--                                    OOP Programming in Java,-->
 <!--                                    Data Structures-->
+<!--                                    Nand to Tetris-->
+<!--                                    Introduction to Machine Learning-->
 <!--                                </h6>-->
                                 <br><br>
                             </div>
@@ -358,7 +360,7 @@
                         </h3>
                         <p class="subtitle-a">
                             Selected project, all available on my <a
-                                href="https://github.com/nirblo50"> <strong>
+                                href="https://github.com/regevnoam1"> <strong>
                             GitHub page</strong> </a>
                         </p>
                         <div class="line-mf"></div>
@@ -422,39 +424,6 @@
                                             <span class="circle"><i
                                                     class="fa-solid fa-link"></i></span></a>
                                         <a href="https://github.com/nirblo50/Web-project">
-                                            <span class="circle"><i
-                                                    class="bi bi-github"></i></span></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="work-box">
-                        <a href="assets/img/Feed_Hadar_V.mp4"
-                           data-gallery="portfolioGallery"
-                           class="portfolio-lightbox">
-                            <div class="work-img">
-                                <img src="assets/img/feed_hadar_image.jpg"
-                                     alt="" class="img-fluid">
-                            </div>
-                        </a>
-                        <div class="work-content">
-                            <div class="row">
-                                <div class="col-sm-8">
-                                    <h2 class="w-title">Android Game App</h2>
-                                    <div class="w-more">
-                                        <span class="w-ctegory">Java | Android Studio | Game Development</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="w-like">
-                                        <a href="https://play.google.com/store/apps/details?id=com.balouka.feedthehadar&hl=iw&gl=US">
-                                            <span class="circle"><i
-                                                    class="fa-brands fa-google-play"></i></span></a>
-                                        <a href="https://github.com/nirblo50/FeedTheHadar">
                                             <span class="circle"><i
                                                     class="bi bi-github"></i></span></a>
                                     </div>
@@ -578,12 +547,12 @@
                                                     class="fa-brands fa-whatsapp"></i></span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/in/nir-balouka/"><span
+                                            <a href="https://www.linkedin.com/in/noamregev1/"><span
                                                     class="ico-circle"><i
                                                     class="bi bi-linkedin"></i></span></a>
                                         </li>
                                         <li>
-                                            <a href="https://github.com/nirblo50"><span
+                                            <a href="https://github.com/regevnoam1"><span
                                                     class="ico-circle"><i
                                                     class="bi bi-github"></i></span></a>
                                         </li>
@@ -606,7 +575,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="copyright-box">
-                    <p class="copyright">&copy; Copyright Nir Balouka</p>
+                    <p class="copyright">&copy; Copyright Noam Regev</p>
                     <div class="credits">
                         <!--
                         All the links in the footer should remain intact.
