--- a/index.html
+++ b/index.html
@@ -309,39 +309,6 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="service-box">
-                        <div class="service-ico">
-                            <span class="ico-circle"><i
-                                    class="bi bi-controller"></i></span>
-                        </div>
-                        <div class="service-content">
-                            <h2 class="s-title">Game development</h2>
-                            <p class="s-description text-center">
-                                Game development in python and Java, Both for
-                                Desktop and Android
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="service-box">
-                        <div class="service-ico">
-                            <span class="ico-circle"><i
-                                    class="fa-brands fa-android"></i></span>
-                        </div>
-                        <div class="service-content">
-                            <h2 class="s-title">Android apps</h2>
-                            <p class="s-description text-center">
-                                I have developed few android apps with Java
-                                using Android studio.
-                                Most of them were games
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
     </section>
@@ -386,7 +353,7 @@
                                     <h2 class="w-title">Blog Web
                                         application</h2>
                                     <div class="w-more">
-                                        <span class="w-ctegory"> Web development | Web Design | Flask </span>
+                                        <span class="w-ctegory"> Web development | Web Design | ReactJS | Server & Client
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -394,40 +361,7 @@
                                         <a href="http://nirblo50.pythonanywhere.com">
                                             <span class="circle"><i
                                                     class="fa-solid fa-link"></i></span></a>
-                                        <a href="https://github.com/nirblo50/Web-project">
-                                            <span class="circle"><i
-                                                    class="bi bi-github"></i></span></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                    <div class="work-box">
-                        <a href="assets/img/dodge.mp4"
-                           data-gallery="portfolioGallery"
-                           class="portfolio-lightbox">
-                            <div class="work-img">
-                                <img src="assets/img/dodge_image.jpg"
-                                     alt="" class="img-fluid">
-                            </div>
-                        </a>
-                        <div class="work-content">
-                            <div class="row">
-                                <div class="col-sm-8">
-                                    <h2 class="w-title">Android Game App</h2>
-                                    <div class="w-more">
-                                        <span class="w-ctegory">Java | Android Studio | Game Development</span>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="w-like">
-                                        <a href="https://play.google.com/store/apps/details?id=com.mygdx.dodgethealien&hl=iw&gl=US">
-                                            <span class="circle"><i
-                                                    class="fa-brands fa-google-play"></i></span></a>
-                                        <a href="https://github.com/nirblo50/DodgeTheAlien">
+                                        <a href="https://github.com/regevnoam1/Web-project">
                                             <span class="circle"><i
                                                     class="bi bi-github"></i></span></a>
                                     </div>
@@ -457,7 +391,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="w-like">
-                                        <a href="https://github.com/nirblo50/MapleStrory_Themed_Game">
+                                        <a href="https://github.com/regevnoam1/OOP-Skeleton-Game">
                                             <span class="circle">
                                                 <i class="bi bi-github"></i>
                                             </span></a>
@@ -495,11 +429,11 @@
                                         You can contact me through my email
                                         address /
                                         phone number or through the following
-                                        platforms
+                                        platforms:
                                     </p>
                                     <ul class="list-ico">
 <!--                                        <li><span class="bi bi-geo-alt"></span>-->
-<!--                                            Herzl Blvd 98, Jerusalem-->
+<!--                                            Jerusalem,Israel-->
 <!--                                        </li>-->
                                         <li><span class="bi bi-phone"></span>
                                             (+972) 52-3208687
