--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     class="bi bi-hdd-rack-fill"></i></span>
                         </div>
                         <div class="service-content">
-                            <h2 class="s-title">Server-Client</h2>
+                            <h2 class="s-title">Server - Client</h2>
                             <p class="s-description text-center">
                                 Server-Client using sockets. I have developed
                                 an online
@@ -373,7 +373,7 @@
 
                 <div class="col-md-4">
                     <div class="work-box">
-                        <a href="assets/img/mapleStoryRunning.mp4"
+                        <a href="assets/img/SkeletonGame.webm"
                            data-gallery="portfolioGallery"
                            class="portfolio-lightbox">
                             <div class="work-img">
