--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="w-like">
-                                        <a href="http://nirblo50.pythonanywhere.com">
+                                        <a href="http://link_to_my_future_website.com">
                                             <span class="circle"><i
                                                     class="fa-solid fa-link"></i></span></a>
                                         <a href="https://github.com/regevnoam1/Web-project">
@@ -377,7 +377,7 @@
                            data-gallery="portfolioGallery"
                            class="portfolio-lightbox">
                             <div class="work-img">
-                                <img src="assets/img/mapleStroryImage.jpg"
+                                <img src="assets/img/skeleton.png"
                                      alt="" class="img-fluid">
                             </div>
                         </a>
@@ -386,7 +386,7 @@
                                 <div class="col-sm-8">
                                     <h2 class="w-title">Desktop Game App</h2>
                                     <div class="w-more">
-                                        <span class="w-ctegory">Java | OOP Principles | School Assignment</span>
+                                        <span class="w-ctegory">Java | OOP Principles | Course Assignment</span>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
