--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
            
 
-                <div class="col-md-4">
+<!--                 <div class="col-md-4">
                     <div class="work-box">
                         <a href="assets/img/web-running.mp4"
                            data-gallery="portfolioGallery"
@@ -353,7 +353,7 @@
                                     <h2 class="w-title">Blog Web
                                         application</h2>
                                     <div class="w-more">
-                                        <span class="w-ctegory"> Web development | Web Design | ReactJS | Server & Client
+                                        <span class="w-ctegory"> Web Development | ReactJS | HTML
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -369,7 +369,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-md-4">
                     <div class="work-box">
