--- a/index.html
+++ b/index.html
@@ -337,40 +337,36 @@
 
            
 
-<!--                 <div class="col-md-4">
-<!--                     <div class="work-box">
-<!--                         <a href="assets/img/web-running.mp4" --> -->
-<!--                            data-gallery="portfolioGallery" -->
-<!--                            class="portfolio-lightbox"> -->
-<!--                             <div class="work-img"> -->
-<!--                                 <img src="assets/img/web-app.jpg" alt="" -->
-<!--                                      class="img-fluid"> -->
-<!--                             </div> -->
-<!--                         </a> -->
-<!--                         <div class="work-content"> -->
-<!--                             <div class="row"> -->
-<!--                                 <div class="col-sm-8"> -->
-<!--                                     <h2 class="w-title">Blog Web -->
-<!--                                         application</h2>
-<!--                                     <div class="w-more"> --> -->
-<!--                                         <span class="w-ctegory"> Web Development | ReactJS | HTML -->
-<!--                                     </div> -->
-<!--                                 </div> -->
-<!--                                 <div class="col-sm-4"> -->
-<!--                                     <div class="w-like"> -->
-<!--                                         <a href="http://link_to_my_future_website.com"> -->
-<!--                                             <span class="circle"><i -->
-<!--                                                     class="fa-solid fa-link"></i></span></a> -->
-<!--                                         <a href="https://github.com/regevnoam1/Web-project"> -->
-<!--                                             <span class="circle"><i -->
-<!--                                                     class="bi bi-github"></i></span></a> -->
-<!--                                     </div> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                         </div> -->
-<!--                     </div> -->
-<!--                 </div> --> -->
-
+                <div class="col-md-4">
+                    <div class="work-box">
+                        <a href="assets/img/004d0ff1-a604-4180-ab1a-78ff33e5e4ee.mkv"
+                           data-gallery="portfolioGallery"
+                           class="portfolio-lightbox">
+                            <div class="work-img">
+                                <img src="ezgif.com-video-to-gif.gif" alt=""
+                                     class="img-fluid">
+                            </div>
+                        </a>
+                        <div class="work-content">
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <h2 class="w-title">Blog Web
+                                        application</h2>
+                                    <div class="w-more">
+                                        <span class="w-ctegory"> Web development | Web Design | ReactJS </span>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="w-like">
+                                        <a href="https://github.com/regevnoam1/MyBlog">
+                                            <span class="circle"><i
+                                                    class="bi bi-github"></i></span></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-4">
                     <div class="work-box">
                         <a href="assets/img/SkeletonGame.webm"
