--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                            data-gallery="portfolioGallery"
                            class="portfolio-lightbox">
                             <div class="work-img">
-                                <img src="ezgif.com-video-to-gif.gif" alt=""
+                                <img src="assets/img/blog_img.png"" alt=""
                                      class="img-fluid">
                             </div>
                         </a>
