--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
 
                 <div class="col-md-4">
                     <div class="work-box">
-                        <a href="assets/img/004d0ff1-a604-4180-ab1a-78ff33e5e4ee.mkv"
+                        <a href="assets/img/blog_video.mp4"
                            data-gallery="portfolioGallery"
                            class="portfolio-lightbox">
                             <div class="work-img">
-                                <img src="assets/img/blog_img.png"" alt=""
+                                <img src="assets/img/blog_img.png" alt=""
                                      class="img-fluid">
                             </div>
                         </a>
