--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <div class="row">
                                 <div class="col-sm-8">
                                     <h2 class="w-title">Blog Web
-                                        application</h2>
+                                        Application</h2>
                                     <div class="w-more">
                                         <span class="w-ctegory"> Web development | Web Design | ReactJS </span>
                                     </div>
@@ -379,10 +379,10 @@
                         </a>
                         <div class="work-content">
                             <div class="row">
-                                <div class="col-sm-4">
+                                <div class="col-sm-8">
                                     <h2 class="w-title">Desktop Game App</h2>
                                     <div class="w-more">
-                                        <span class="w-ctegory">Java | OOP Principles | Course Assignment</span>
+                                        <span class="w-ctegory">Java | OOP Principles </span>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
