--- a/index.html
+++ b/index.html
@@ -301,9 +301,8 @@
                         <div class="service-content">
                             <h2 class="s-title">Server - Client</h2>
                             <p class="s-description text-center">
-                                Server-Client using sockets. I have developed
-                                an online
-                                game with a server and multiple users
+                                Server - Client. I develop web blog application, using a local server and client requests
+                                using Axios.
                             </p>
                         </div>
                     </div>
